<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/btnMode"
        style="@style/ButtonImage"
        android:layout_width="@dimen/switch_width"
        android:layout_height="@dimen/switch_width"
        android:background="@color/background"
        android:backgroundTint="@color/background"
        android:backgroundTintMode="src_in"
        app:layout_constraintBottom_toTopOf="@+id/tv_goodMorning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/tv_goodMorning"
        android:layout_width="@dimen/goodmorning_width"
        android:layout_height="@dimen/goodmorning_height"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:padding="@dimen/goodmorning_padding"
        android:text="@string/goodMorning_Text"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/heartBGB"
        app:layout_constraintEnd_toStartOf="@+id/networkGl"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switchTBG"
        app:layout_constraintVertical_bias="0.869" />

    <!--the four square boxes-->
    <ImageButton
        android:id="@+id/switchButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/boxing_hight"
        android:backgroundTint="@color/background"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/heartBGB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/switchBGL"
        app:layout_constraintTop_toTopOf="@id/switchTBG"
        app:layout_constraintVertical_bias="0.62"
        app:srcCompat="@drawable/ic_groups"
        tools:ignore="MissingConstraints" />

    <!--heart image-->
    <ImageButton
        android:id="@+id/heartButton"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="@+id/tv_goodMorning"
        app:layout_constraintStart_toEndOf="@+id/tv_goodMorning"
        app:layout_constraintTop_toTopOf="@+id/tv_goodMorning"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_heart" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/switchBGL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

<!--Search view -->
    <SearchView
        android:id="@+id/searchview"
        android:layout_width="@dimen/searchView_width"
        android:layout_height="@dimen/searchView_hight"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/searchbg"
        android:backgroundTint="@color/rect_tint"
        android:iconifiedByDefault="false"
        android:queryHint="@string/tv_searchText"
        app:layout_constraintBottom_toTopOf="@+id/searchViewBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/heartBGB"
        app:layout_constraintVertical_bias="0.0" />

    <!--constraint guidline to make the make the views stay at a particular position in all screens-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/heartBGB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17834395" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/switchTBG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.062420383" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/heartTBG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="755dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.08152866"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/searchViewBG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30191082" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/networkGl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.42" />


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/searchViewBG"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sv_constraintlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            tools:context=".MainActivity">



            <ImageView
                android:id="@+id/ecllipse"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginStart="124dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="123dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ellipse" />

            <View
                android:id="@+id/rectangle_2"
                android:layout_width="343dp"
                android:layout_height="52dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/followme_rect"
                android:backgroundTint="#0E0E0E"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/san_francis" />

            <View
                android:id="@+id/message_rectangle"
                android:layout_width="343dp"
                android:layout_height="52dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rectangle_2"
                android:backgroundTint="@color/rect_tint"
                android:backgroundTintMode="multiply"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rectangle_2" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="142dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="141dp"
                android:fontFamily="@font/comfortaa_bold"
                android:letterSpacing="0.05"
                android:paddingLeft="5dp"
                android:paddingTop="4dp"
                android:paddingRight="5dp"
                android:paddingBottom="4dp"
                android:text="@string/tv_name"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                app:autoSizeMaxTextSize="36px"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ecllipse" />

            <TextView
                android:id="@+id/san_francis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="121dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="121dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/tv_san_francisco"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="98dp"
                android:layout_height="22dp"
                android:fontFamily="@font/roboto_bold"
                android:shadowColor="#FFFFFF"
                android:text="@string/tv_follow_me"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/textColor"
                app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
                app:layout_constraintEnd_toEndOf="@+id/rectangle_2"
                app:layout_constraintStart_toStartOf="@+id/rectangle_2"
                app:layout_constraintTop_toTopOf="@+id/rectangle_2" />

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/message"
                android:textAllCaps="true"
                android:textColor="@color/textColor"
                app:layout_constraintBottom_toBottomOf="@+id/message_rectangle"
                app:layout_constraintEnd_toEndOf="@+id/message_rectangle"
                app:layout_constraintStart_toStartOf="@+id/message_rectangle"
                app:layout_constraintTop_toTopOf="@+id/message_rectangle" />

            <!--GridLayout to constain the six images-->
            <GridLayout
                android:id="@+id/gridlayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:columnCount="3"
                android:orientation="horizontal"
                android:rowCount="3"
                android:verticalSpacing="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message_rectangle"
                app:layout_constraintVertical_bias="0.031">

                <ImageView
                    android:id="@+id/gl_11"
                    android:layout_width="@dimen/grid_elementSize"
                    android:layout_height="@dimen/grid_elementSize"
                    android:layout_margin="@dimen/grid_elementMargin"
                    android:src="@drawable/rectangle11"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="413dp" />

                <ImageView
                    android:id="@+id/gl_12"
                    android:layout_width="@dimen/grid_elementSize"
                    android:layout_height="@dimen/grid_elementSize"
                    android:layout_margin="@dimen/grid_elementMargin"
                    android:src="@drawable/rectangle12"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="413dp" />

                <ImageView
                    android:id="@+id/gl_13"
                    android:layout_width="@dimen/grid_elementSize"
                    android:layout_height="@dimen/grid_elementSize"
                    android:layout_margin="@dimen/grid_elementMargin"
                    android:src="@drawable/rectangle13"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="413dp" />

                <ImageView
                    android:id="@+id/gl_21"
                    android:layout_width="@dimen/grid_elementSize"
                    android:layout_height="@dimen/grid_elementSize"
                    android:layout_margin="@dimen/grid_elementMargin"
                    android:src="@drawable/rectangle21"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="413dp" />

                <ImageView
                    android:id="@+id/gl_22"
                    android:layout_width="@dimen/grid_elementSize"
                    android:layout_height="@dimen/grid_elementSize"
                    android:layout_margin="@dimen/grid_elementMargin"
                    android:src="@drawable/rectangle22"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="413dp" />

                <ImageView
                    android:id="@+id/gl_23"
                    android:layout_width="@dimen/grid_elementSize"
                    android:layout_height="@dimen/grid_elementSize"
                    android:layout_margin="@dimen/grid_elementMargin"
                    android:src="@drawable/rectangle23"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="413dp" />

                <ImageView
                    android:id="@+id/gl_31"
                    android:layout_width="@dimen/grid_elementSize"
                    android:layout_height="@dimen/grid_elementSize"
                    android:layout_margin="@dimen/grid_elementMargin"
                    android:src="@drawable/rectangle31"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="413dp" />

                <ImageView
                    android:id="@+id/gl_32"
                    android:layout_width="@dimen/grid_elementSize"
                    android:layout_height="@dimen/grid_elementSize"
                    android:layout_margin="@dimen/grid_elementMargin"
                    android:src="@drawable/rectangle32"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="413dp" />

                <ImageView
                    android:id="@+id/gl_33"
                    android:layout_width="@dimen/grid_elementSize"
                    android:layout_height="@dimen/grid_elementSize"
                    android:layout_margin="@dimen/grid_elementMargin"
                    android:src="@drawable/rectangle33"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="413dp" />


            </GridLayout>

            <View
                android:id="@+id/seemmore_rectangle"
                android:layout_width="343dp"
                android:layout_height="52dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="37dp"
                android:background="@drawable/rectangle_2"
                android:backgroundTint="@color/rect_tint"
                android:backgroundTintMode="multiply"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gridlayout" />

            <TextView
                android:id="@+id/tv_seemore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/tv_seemore"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/textColor"
                app:layout_constraintBottom_toBottomOf="@+id/seemmore_rectangle"
                app:layout_constraintEnd_toEndOf="@+id/seemmore_rectangle"
                app:layout_constraintStart_toEndOf="@+id/seemmore_rectangle"
                app:layout_constraintStart_toStartOf="@+id/seemmore_rectangle"
                app:layout_constraintTop_toTopOf="@+id/seemmore_rectangle" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
